--- a/task-09/Readme
+++ b/task-09/Readme
@@ -1,2 +1,1 @@
-sudo docker run --rm --network musor_work -it -p 80:8080 --name jenkins musor_jenkins 
-sudo docker run --rm --network musor_work -it -p 81:8081 --name nexus musor_nexus 
+nohup docker-compose build >& /dev/null &
